format update existing finished

--- a/view/admin/add_banner.ejs
+++ b/view/admin/add_banner.ejs
@@ -29,11 +29,13 @@
             />
           </label>
           <div id="image0" class="image-container"></div>
-          <button style="display: none;" id="btnCrop0"
-          class="px-3 py-1 text-sm font-medium leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-md active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
-        >
-          Crop
-        </button>
+          <button
+            style="display: none"
+            id="btnCrop0"
+            class="px-3 py-1 text-sm font-medium leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-md active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
+          >
+            Crop
+          </button>
 
           <label class="block text-sm">
             <span class="text-gray-700 dark:text-gray-400">URL</span>
