--- a/view/admin/edit_coupon.ejs
+++ b/view/admin/edit_coupon.ejs
@@ -7,7 +7,6 @@
       <h4 class="mb-4 text-lg font-semibold text-gray-600 dark:text-gray-300">Edit Coupon</h4>
       <form action="/admin/coupon/edit-coupon/<%= couponId %> " method="post">
         <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
-          
           <label class="block text-sm mt-1">
             <span class="text-gray-700 dark:text-gray-400">Coupon Code</span>
             <input
@@ -64,7 +63,8 @@
             />
           </label>
 
-          <button type="submit"
+          <button
+            type="submit"
             class="px-5 py-3 mt-8 w-full font-medium w-64 leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
           >
             Edit Coupon
