--- a/view/admin/login.ejs
+++ b/view/admin/login.ejs
@@ -114,7 +114,7 @@
     </div>
     <% if (msg.length>0) { %>
     <script>
-      alertMsg('<%= msg %>')
+      alertMsg('<%= msg %>');
       function alertMsg(msg) {
         const Toast = Swal.mixin({
           toast: true,
