--- a/view/user/order.ejs
+++ b/view/user/order.ejs
@@ -85,9 +85,7 @@
           <!-- Add class 'active' to progress -->
           <div class="row d-flex justify-content-center">
             <div class="col-12">
-              <ul id="progressbar" class="text-center">
-                
-              </ul>
+              <ul id="progressbar" class="text-center"></ul>
             </div>
           </div>
           <div class="row justify-content-between top">
