--- a/view/admin/edit_brand.ejs
+++ b/view/admin/edit_brand.ejs
@@ -7,15 +7,15 @@
       <h4 class="mb-4 text-lg font-semibold text-gray-600 dark:text-gray-300">Edit Brand</h4>
       <form action="/admin/brand/edit-brand/<%= brandId %> " method="post" enctype="multipart/form-data">
         <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
-          
-            <label class="block text-sm">
+          <label class="block text-sm">
             <span class="text-gray-700 dark:text-gray-400">Brand Name</span>
             <input
-              name="title" value="<%= brand[0].title %>"
+              name="title"
+              value="<%= brand[0].title %>"
               type="text"
-              class="block w-full mt-1 text-sm dark:border-gray-600 
-              dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-              required/>
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              required
+            />
           </label>
 
           <label class="block mt-4 text-sm">
@@ -24,19 +24,23 @@
               name="image"
               type="file"
               class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-              />
+            />
           </label>
-          <img src="/brand_img/<%= brand[0].image %>" alt="" width="100px" >
+          <img src="/brand_img/<%= brand[0].image %>" alt="" width="100px" />
 
           <label class="block mt-4 text-sm">
             <span class="text-gray-700 dark:text-gray-400">Description</span>
             <textarea
               name="description"
               class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-              required/><%= brand[0].description %></textarea>
+              required
+            >
+<%= brand[0].description %></textarea
+            >
           </label>
 
-          <button type="submit"
+          <button
+            type="submit"
             class="px-5 py-3 mt-8 w-full font-medium w-64 leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
           >
             Edit Brand
