--- a/view/user/home.ejs
+++ b/view/user/home.ejs
@@ -6,24 +6,26 @@
     <div class="row align-items-center">
       <div class="col-lg-12">
         <div class="banner_slider owl-carousel">
+          <% banner.forEach(el => { %>
           <div class="single_banner_slider">
             <div class="row">
               <div class="col-lg-5 col-md-12">
                 <div class="banner_text">
                   <div class="banner_text_iner">
-                    <h1><%= banner[0].title %></h1>
-                    <p><%= banner[0].description %></p>
-                    <a href="<%= banner[0].url  %>" class="btn_2">buy now</a>
+                    <h1><%= el.title %></h1>
+                    <p><%= el.description %></p>
+                    <a href="<%= el.url  %>" class="btn_2">buy now</a>
                   </div>
                 </div>
               </div>
-                <div class="banner_img d-lg-block">
-                  <a href="<%= banner[0].url  %>">
-                    <img src="/banner_img/<%= banner[0].image  %> " alt="" />
-                  </a>
-                </div>
+              <div class="banner_img d-lg-block">
+                <a href="<%= el.url  %>">
+                  <img src="/banner_img/<%= el.image  %> " alt="" />
+                </a>
+              </div>
             </div>
           </div>
+          <% }) %>
         </div>
         <div class="slider-counter"></div>
       </div>
