--- a/view/user/p_details.ejs
+++ b/view/user/p_details.ejs
@@ -8,15 +8,11 @@
         <div class="product_slider_img">
           <div id="vertical">
             <div id="sample" data-thumb="/product_img/<%= product.thumbnail %>">
-              <img
-                src="/product_img/<%= product.thumbnail %>"
-              />
+              <img src="/product_img/<%= product.thumbnail %>" />
             </div>
             <% product.images.forEach((element,index) => { %>
             <div data-thumb="/product_img/<%= element %>">
-              <img
-                src="/product_img/<%= element %>"
-              />
+              <img src="/product_img/<%= element %>" />
             </div>
             <% }) %>
           </div>
@@ -58,15 +54,37 @@
             </div>
             <a onclick="cartAdd('<%= product._id %>')" class="btn_3">add to cart</a>
             <!-- <a href="/wishlist" class="like_us"> <i class="ti-heart"></i> </a> -->
-            <% if (user) { %> 
-              <% if (wishlisted) { %>
-                <a id="heart_symbol<%= index %>" onclick="updateWish('<%= product._id %>','<%= index %>')"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
-              </svg></i></a>
+            <% if (user) { %> <% if (wishlisted) { %>
+            <a id="heart_symbol<%= index %>" onclick="updateWish('<%= product._id %>','<%= index %>')"
+              ><i
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-heart-fill"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
+                  /></svg></i
+            ></a>
             <% }else{ %>
-              <a id="heart_symbol<%= index %>" onclick="updateWish('<%= product._id %>','<%= index %>')"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-            </svg></i></a>
+            <a id="heart_symbol<%= index %>" onclick="updateWish('<%= product._id %>','<%= index %>')"
+              ><i
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-heart"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"
+                  /></svg></i
+            ></a>
             <% } %> <% }else{ %>
             <a href="/add-to-wishlist/<%= product._id %>"
               ><i
@@ -573,6 +591,5 @@
   </div>
 </section>
 <!-- product_list part end-->
-
 
 <%- include('partials/footer.ejs') %>
