--- a/view/admin/product_management.ejs
+++ b/view/admin/product_management.ejs
@@ -382,10 +382,7 @@
 
       <!-- TABLE END  -->
     </div>
-    <!-- 
-</div>
-
-
+<!-- </div>
 </div> -->
   </main>
       <!-- Modal backdrop. This what you want to place close to the closing body tag -->
