Coupon max discount amount set

--- a/view/admin/edit_coupon.ejs
+++ b/view/admin/edit_coupon.ejs
@@ -62,6 +62,16 @@
               required
             />
           </label>
+          <label class="block text-sm mt-1">
+            <span class="text-gray-700 dark:text-gray-400">Max Cart Discount</span>
+            <input
+              name="maxDiscountAmount"
+              value="<%= coupon[0].maxDiscountAmount %>"
+              type="number"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              required
+            />
+          </label>
 
           <button
             type="submit"
