--- a/view/admin/add_coupon.ejs
+++ b/view/admin/add_coupon.ejs
@@ -72,7 +72,16 @@
               required
             />
           </label>
-
+          <label class="block text-sm mt-1">
+            <span class="text-gray-700 dark:text-gray-400">Max Cart Discount</span>
+            <input
+              name="maxDiscountAmount"
+              value=""
+              type="number"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              required
+            />
+          </label>
           <button
             type="submit"
             class="px-5 py-3 mt-8 w-full font-medium w-64 leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
