--- a/view/user/order_confirmation.ejs
+++ b/view/user/order_confirmation.ejs
@@ -115,10 +115,10 @@
     if ('<%= order.discountIsPercent %>' == 'true') {
       console.log('<%= order.discountIsPercent %>');
       $(
-        `<tr id="confirmation_subtotal"><th colspan="3">Discount</th><th>-%${'<%= order.discount %>'}</th></tr>`
+        `<tr id="confirmation_subtotal"><th colspan="3">Discount</th><th>-%${'<%= order.discount %>'}(${(Math.round('<%= order.total %>' * ('<%= order.discount %>' / 100)))<'<%= order.maxDiscountAmt %>'?(Math.round( '<%= order.total %>'* ('<%= order.discount %>' / 100))):'<%= order.maxDiscountAmt %>'})</th></tr>`
       ).insertAfter(`#confirmation_subtotal`);
       $(`#confirmation_total`).replaceWith(
-        `<tr id="confirmation_total"><th colspan="3"></th><th>₹${'<%= Math.round(order.total*(1-(order.discount/100)))+50 %>'}</th></tr>`
+        `<tr id="confirmation_total"><th colspan="3"></th><th>₹${(Math.round('<%= order.total %>' * (1 - '<%= order.discount %>' / 100)) + 50)<'<%= order.maxDiscountAmt %>'?(Math.round( '<%= order.total %>'* (1 - '<%= order.discount %>' / 100)) + 50):'<%= order.total %>'-'<%= order.maxDiscountAmt %>'+50}</th></tr>`
       );
     } else {
       $(
