--- a/view/user/order_success.ejs
+++ b/view/user/order_success.ejs
@@ -105,9 +105,9 @@
 <script>
   if ('<%= discountAmt %>') {
     if ('<%= isPercent %>' == 'true') {
-      $(`<tr><th colspan="3">Discount</th><th>-%${'<%= discountAmt %>'}</th></tr>`).insertAfter(`#success_subtotal`);
+      $(`<tr><th colspan="3">Discount</th><th>-%${'<%= discountAmt %>'}(${'<%= Math.round(order.total*((discountAmt/100)))+50 %>'<'<%= maxDiscountAmt %>'?'<%= Math.round(order.total*((discountAmt/100))) %>':'<%= maxDiscountAmt %>'})</th></tr>`).insertAfter(`#success_subtotal`);
       $(`#success_total`).replaceWith(
-        `<tr id="success_total"><th scope="col" colspan="3"></th><th scope="col"> ₹${'<%= Math.round(order.total*(1-(discountAmt/100)))+50 %>'}.00</th></tr>`
+        `<tr id="success_total"><th scope="col" colspan="3"></th><th scope="col"> ₹${'<%= Math.round(order.total*(1-(discountAmt/100)))+50 %>'<'<%= maxDiscountAmt %>'?'<%= Math.round(order.total*(1-(discountAmt/100)))+50 %>':'<%= order.total-maxDiscountAmt+50 %>'}.00</th></tr>`
       );
     } else {
       $(`<tr><th colspan="3">Discount</th><th>-₹${'<%= discountAmt %>'}.00</th></tr>`).insertAfter(`#success_subtotal`);
